syntax = "proto3";

package buildbarn.failure;

import "build/bazel/remote/execution/v2/remote_execution.proto";

option go_package = "github.com/EdSchouten/bazel-buildbarn/pkg/proto/failure";

// ActionFailure is a custom message that is stored into the Content
// Addressable Storage. The Action Cache is only permitted to contain
// ActionResults of successful builds. In our case we also want to
// provide the user insight as to why their build fails by storing the
// ActionResult upon failure.
//
// This message is written into the ContentAddressableStorage by
// bbb_worker by the ServerLogInjectingBuildExecutor. The digest is
// returned to the user by attaching a URL to bbb_browser as a server
// log in the ExecuteResponse.
message ActionFailure {
	build.bazel.remote.execution.v2.Digest action_digest = 1;
	build.bazel.remote.execution.v2.ActionResult action_result = 2;
}
